--- a/_config.yml
+++ b/_config.yml
@@ -6,5 +6,5 @@ baseurl: "/Studying" # 关键！因为你的仓库名是 Studying
 url: "https://Miss100552.github.io" 
 
 # 这里的配置告诉 Jekyll 怎么处理 GitHub 的元数据
-repository: 你的用户名/Studying
+repository: Miss100552/Studying
 remote_theme: minima
